--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>GreenerGit</title>
 
+		
 		<!-- external CSS link -->
+		<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+		<link rel="stylesheet" href="bower_components/Morphext/dist/morphext.css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+
+
 	</head>
 	<body>
 		<header class="top" id="topTop">
@@ -24,14 +31,28 @@
 			</nav>
 		</header>
 
-		<main class="container mainOne" id="about"></main>
+		<main class="container mainOne" id="about">
+
+			<section class="hero">
+				<div class="cta">
+						<span id="js-rotating">commit your future, push your limits, pull your weight, branch out</span>
+					<!-- commit your future
+						push your limits
+						pull your weight
+						branch out -->
+					<button>Start</button>
+				</div>
+			</section>
+
+		</main>
 
 		<section class="container mainTwo" id='services'></section>
 
 		<section class="container mainThree" id="projects"></section>
 
 		<footer class="bottom"></footer>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="bower_components/Morphext/dist/morphext.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
