--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
+    	<meta name="description" content="Git your Git Greener">
     	<meta name="keywords" content="one, two, three">
 
 		<title>GreenerGit</title>
